[project]
name = "pynecraft"
authors = [{name = "Ken Arnold", email = "arnold@peak.im"}]
description = "A library for creating minecraft datapacks."
readme = "README.rst"
license = {text = "CC BY 4.0 DEED"}
requires-python = ">=3.11"
version = "0.5"
dependencies = [ "requests", "bs4", ]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
